--- a/app/components/Sections/Footer/footer.module.css
+++ b/app/components/Sections/Footer/footer.module.css
@@ -1,6 +1,7 @@
 .footerBox{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem 3rem;
     background-color: transparent;
     color: #717078;
